...
                            <constraint firstAttribute="bottom" secondItem="jKW-9d-Wdz" secondAttribute="bottom" id="Nvu-qk-H32"/>
                            <constraint firstItem="bmz-UL-jSR" firstAttribute="trailing" secondItem="jKW-9d-Wdz" secondAttribute="trailing" id="Vkw-Qx-1WU"/>
                            <constraint firstItem="jKW-9d-Wdz" firstAttribute="top" secondItem="bmz-UL-jSR" secondAttribute="top" id="fNt-oC-Z4w"/>
                            <constraint firstItem="jKW-9d-Wdz" firstAttribute="leading" secondItem="bmz-UL-jSR" secondAttribute="leading" id="nnl-Zf-Foj"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="NY Times Most Popular" id="j2d-lc-6OZ">
                        <barButtonItem key="backBarButtonItem" title=" " id="EDX-EK-Wou"/>
                        <barButtonItem key="leftBarButtonItem" image="menu" id="e7r-6R-uml">
                            <color key="tintColor" name="ColorWhite"/>
                        </barButtonItem>
                        <rightBarButtonItems>
                            <barButtonItem image="more" id="1QB-HB-jdu">
...
                            <constraint firstAttribute="bottom" secondItem="aaW-h8-o8r" secondAttribute="bottom" id="EC4-zc-lEt"/>
                            <constraint firstItem="aaW-h8-o8r" firstAttribute="leading" secondItem="ekP-fy-Rjf" secondAttribute="leading" id="Iqf-kM-lek"/>
                            <constraint firstItem="aaW-h8-o8r" firstAttribute="top" secondItem="ekP-fy-Rjf" secondAttribute="top" id="bbu-Rm-wJL"/>
                            <constraint firstItem="ekP-fy-Rjf" firstAttribute="trailing" secondItem="aaW-h8-o8r" secondAttribute="trailing" id="x0X-8z-7rd"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Search" id="Rjy-WF-iOi">
                        <barButtonItem key="backBarButtonItem" title=" " id="Fks-Us-5aq"/>
                    </navigationItem>
                    <connections>
                        <outlet property="tableView" destination="aaW-h8-o8r" id="hmj-iq-PDZ"/>
                        <segue destination="3bK-EZ-dlr" kind="show" identifier="detailsSegue" id="BTx-QM-e0g"/>
                    </connections>
...
                            <constraint firstItem="wk8-G9-UUW" firstAttribute="leading" secondItem="aww-9f-mzE" secondAttribute="leading" id="YNr-I4-ugT"/>
                            <constraint firstItem="wk8-G9-UUW" firstAttribute="centerX" secondItem="aww-9f-mzE" secondAttribute="centerX" id="aIJ-ca-zV6"/>
                            <constraint firstItem="aww-9f-mzE" firstAttribute="trailing" secondItem="wk8-G9-UUW" secondAttribute="trailing" id="u3b-6Y-X9m"/>
                            <constraint firstAttribute="bottom" secondItem="wk8-G9-UUW" secondAttribute="bottom" id="u4o-lW-nZs"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Article Details" id="vNy-ZP-ijz"/>
                    <connections>
                        <outlet property="imgArticle" destination="lug-0a-K4m" id="8Oo-hb-Zmc"/>
                        <outlet property="lblBy" destination="m3Y-UR-Lip" id="cgp-7B-ioM"/>
                        <outlet property="lblDate" destination="8So-gF-Bd9" id="IGN-Hf-gMj"/>
                        <outlet property="lblDetails" destination="Sij-qj-rnL" id="fHU-vU-whh"/>
                        <outlet property="lblSection" destination="epU-C4-JCd" id="OIG-kP-1GL"/>
...
